--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "express": "^4.17.1",
+    "nuxt": "^2.15.7",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {}
 }
