--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "express": "^4.17.1",
-    "nuxt": "^2.15.7",
-    "serve-static": "^1.14.1"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {}
 }
